Fix mathjax bug - culprit: z-index

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -88,7 +88,6 @@ body {
 		overflow-x: auto;
 		white-space: nowrap;
 		width: 100%;
-		z-index: -99;
 		overflow: scroll;
 	}
 
